<resources>
    <!--Register Screen-->
    <string name="app_name">PresentPal</string>
    <string name="person_insert_text_title">Add new person</string>
    <string name="person_insert_text_firstname">Firstname:</string>
    <string name="person_insert_text_lastname">Lastname:</string>
    <string name="person_insert_text_nickname">Nickname:</string>
    <string name="person_insert_button_add">ADD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_message1">Welcome!</string>
    <string name="welcome_message2">Create your account</string>
    <string name="register_Text">Register</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="password_Text">Password:</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="nickname">Nickname:</string>
    <string name="enter_your_password">enter your password</string>
    <string name="presentpal">PresentPal</string>
    <string name="camera_button_to_add_a_picture">Camera button to add a picture</string>
    <string name="enter_your_nickname">enter your nickname</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="log_in">Log in</string>
    <string name="local_password">Local Password:</string>
    <string name="enter_your_local_password">enter your local password</string>
    <string name="event_insert_text_person">Person:</string>
    <string name="event_insert_text_date">Date:</string>
    <string name="event_insert_text_title">Title:</string>
    <string name="event_insert_text_maintitle">Add new event</string>
    <string name="categories">"Categories: "</string>
    <string name="family">Family</string>
    <string name="colleagues">Colleagues</string>
    <string name="favorites">Favorites</string>
    <string name="home" translatable="false">Home\n</string>
    <string name="cancel">cancel</string>
    <string name="insert_a_new_person">Add new person</string>
    <string name="insert_a_new_event">Add new event</string>
    <string name="insert_a_new_present_idea">Add new present idea</string>
    <string name="choose_an_action">Choose an action</string>
    <string name="good_evening">"Hello "</string>
    <string name="view_all">View all</string>
    <string name="friends">Friends</string>
    <string name="next_events">Next events</string>
    <string name="person_no_interests_hint">"No entries yet...\n\nTo enter further details about the person, switch to the \"Edit profile\" tab. "</string>
    <string name="person_insert_failed">Something went wrong...</string>
    <string name="person_insert_ok">New person has been created</string>
    <string name="present_idea_insert_title">Title:</string>
    <string name="present_idea_insert_short_description">Short description:</string>
    <string name="present_idea_insert_person">Person:</string>
    <string name="present_idea_insert_maintitle">Add new present idea</string>
    <string name="present_idea_insert_button">ADD</string>
    <string name="event_insert_ok">New event has been created</string>
    <string name="event_insert_failed">Something went wrong...</string>
    <string name="present_idea_insert_ok">New present idea has been created</string>
    <string name="present_idea_insert_failed">Something went wrong...</string>
    <string name="presents">Presents</string>
    <string name="ideas">Ideas</string>
    <string name="interests">Interests</string>
    <string name="edit_profile">Edit profile</string>
    <string name="events">Events</string>
    <string name="edit_event">Edit event</string>
    <string name="edit_idea">Edit idea</string>
    <string name="details">Details</string>


    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="in_days">in</string>
    <string name="days">" days"</string>
    <string name="since_days">"since "</string>
    <string name="app_slogan">Organize and track present ideas easily</string>
    <string name="categories_mainAct">Categories</string>
    <string name="mark_as_present">Mark as present</string>
    <string name="save">Save</string>
    <string name="firstname">Firstname:</string>
    <string name="lastname">Lastname</string>
    <string name="interests_edit">Interests:</string>
    <string name="person_delete">Delete person</string>
    <string name="delete_event">Delete event</string>
    <string name="price">Price:</string>
    <string name="description">Description:</string>
    <string name="Delete_idea">Delete idea</string>
    <string name="present_idea_no_description">No description yet...\n\nTo add more information to the idea, select \"Edit idea\"</string>
    <string name="add_to_category">Add to category</string>
    <!--Register Screen end-->


</resources>